# Notlok

./: .gitattributes  .gitignore  AUDIO_DEVICE_SELECTION.md  AUDIO_RECORDING_IMPROVEMENTS.md  AUTO_UPDATE_GUIDE.md  BUILD_AND_DEPLOY.md  BUILD_MACOS.md  CHANGELOG.md  FLOWGLAD_INTEGRATION_GUIDE.md  GITHUB_ACTIONS_GUIDE.md  HOW_TO_DOWNLOAD_BUILDS.md  LICENSE  QUICK_START.md  README.md  README_BUILDS.md  RELEASE_GUIDE.md  UPDATE_SYSTEM_INTEGRATION.md  index.html  notarize.sh  package-lock.json  package.json  prepare-release.sh  setup-github.sh
.github/workflows/: build-release.yml  build.yml
scripts/: build-all.ps1  build-all.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_capture.rs  lib.rs  main.rs  parakeet.rs  transcription.rs  windows.rs
src-tauri/src/audio_capture/: macos.rs  windows.rs
src-tauri/swift/: AudioCapture.swift
src/utils/: logger.ts
website/: README.md  index.html
