[package]
name = "notlok"
version = "2.0.6"
description = "Notlok - AI Destekli Sesli Not Uygulaması / AI-powered Voice Note App"
authors = ["ssilistre"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notlok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
# whisper-rs = { version = "0.13", features = ["coreml"] } # Enable CoreML on macOS if possible, or just default
whisper-rs = "0.13"
# sherpa-rs = "0.6.8"  # Disabled - causes Swift runtime issues
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
hostname = "0.3"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
# ort = "2.0.0-rc.10"  # ONNX Runtime for Parakeet - disabled for now
# ndarray = "0.15" 

# macOS ScreenCaptureKit dependencies disabled for now
# Will be implemented in future update
# [target.'cfg(target_os = "macos")'.dependencies]
# objc2 = "0.6"
# objc2-foundation = { version = "0.3", features = ["NSObject", "NSString", "NSArray", "NSError", "NSValue"] }
# objc2-screen-capture-kit = "0.3"
# objc2-core-media = "0.3"
# objc2-core-graphics = "0.3"
# block2 = "0.6"
